# todo_rs

./: .gitignore  Cargo.toml  README.md  demo.sh  nvim  todo.db
src/: main.rs
src/mods/: cli.rs  db.rs  mod.rs  parse.rs  table.rs  todo.rs
