[package]
name = "todo"
description = "CLI Todo app"
authors = ["Kenan Alizadeh <kananalizade@gmail.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
ascii_table = { version = "4.0.3", features = ["auto_table_width"] }
clap = { version="4.4.11", features = ["derive"] }
home = "0.5.5"
